<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_label"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/text_color"
        android:padding="10dp"
        android:text="@string/age_label"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvMinutesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes_label"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/select_date_button_label" />

    <TextView
        android:id="@+id/tvSelectedDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvSelectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selected_date_label"
        android:visibility="invisible"
        android:textColor="#807B7B"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvTotalMinutesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvTotalMinutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_minutes_label"
        android:visibility="invisible"
        android:textColor="#807B7B"
        android:textSize="16sp" />

</LinearLayout>